--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -1,8 +1,3 @@
 
-editor.identity.picker.lead_id = ORCID:
-editor.identity.picker.name    = LDAP
-
-listWizard.subselect = Person aus LDAP w\u00E4hlen
-
-navigation.Home = Hochschulbibliografie
-navigation.UB   = UB Hagen
+navigation.HomeHagen = Hochschulbibliografie
+navigation.UBHagen   = UB Hagen
