--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -1,3 +1,3 @@
 
-navigation.HomeHagen = Hochschulbibliographie
-navigation.UBHagen   = UB Hagen
+navigation.Home = Hochschulbibliographie
+navigation.UB   = UB Hagen
