DMS-168 browsen nach einrichtung

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -3,3 +3,5 @@ navigation.Home = Hochschulbibliographie
 navigation.UB   = UB Hagen
 
 user.profile.id.hagen = FU-Hagen Personenkennung
+
+browse.ORIGIN=Blättern in Einrichtungen
