add some more message properties to remove duepublico specific texts

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -1,7 +1,10 @@
 
-edit.comment = Notiz
+edit.comment                   = Notiz
+
+editor.identity.picker.lead_id = FernUni ID
 
 navigation.Home = Hochschulbibliographie
 navigation.UB   = UB Hagen
 
-user.profile.id.hagen = FU-Hagen Personenkennung
+user.profile.id.local               = Ihre FernUni ID
+user.profile.publications.ubo.outro = mit Ihnen eindeutig zugeordneter FernUni ID
