--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -6,5 +6,7 @@ editor.identity.picker.lead_id = FernUni ID
 navigation.Home = Hochschulbibliographie
 navigation.UB   = UB Hagen
 
+ubo.shelfmark.validation            = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
+
 user.profile.id.local               = Ihre FernUni ID
 user.profile.publications.ubo.outro = mit Ihnen eindeutig zugeordneter FernUni ID
