sync editor with current UBO version and fixed labels

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -1,12 +1,14 @@
 
 edit.comment                   = Notiz
 
-editor.identity.picker.lead_id = FernUni ID
+editor.identity.picker.lead_id = HSB ID
 
 navigation.Home = Hochschulbibliographie
 navigation.UB   = UB Hagen
 
-ubo.shelfmark.validation            = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
+search.dozbib = Suche in der Hochschulbibliographie
+
+ubo.shelfmark.validation = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
 
 user.profile.id.local               = Ihre FernUni ID
 user.profile.publications.ubo.outro = mit Ihnen eindeutig zugeordneter FernUni ID
