fixed shelfmark validation

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -8,6 +8,7 @@ navigation.UB   = UB Hagen
 
 search.dozbib = Suche in der Hochschulbibliographie
 
+ubo.shelfmark            = Bibliothekssignatur
 ubo.shelfmark.validation = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
 
 user.profile.id.local               = Ihre FernUni ID
