Update import-editor to current UBO version and add corporate

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -8,6 +8,8 @@ navigation.UB   = UB Hagen
 
 search.dozbib = Suche in der Hochschulbibliographie
 
+ubo.comment              = Notiz
+ubo.corporate            = K\u00F6rperschaft
 ubo.shelfmark            = Bibliothekssignatur
 ubo.shelfmark.validation = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
 
