fixed editor validation and behavior errors

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -8,10 +8,11 @@ navigation.UB   = UB Hagen
 
 search.dozbib = Suche in der Hochschulbibliographie
 
-ubo.comment              = Notiz
-ubo.corporate            = K\u00F6rperschaft
-ubo.shelfmark            = Bibliothekssignatur
-ubo.shelfmark.validation = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
+ubo.comment                = Notiz
+ubo.corporate              = K\u00F6rperschaft
+ubo.role.author.validation = Bitte geben Sie eine urhebende Person (z.B. Autor*in) oder Einrichtung ein!
+ubo.shelfmark              = Bibliothekssignatur
+ubo.shelfmark.validation   = Bitte korrigieren Sie das Format der Signatur, z.B. XYZ/ZYX oder XXZZ/YYZZ oder ZYX/XXXX oder ZZYY/XZY
 
 user.profile.id.local               = Ihre FernUni ID
 user.profile.publications.ubo.outro = mit Ihnen eindeutig zugeordneter FernUni ID
