--- a/src/main/resources/config/ubo_hagen/messages_en.properties
+++ b/src/main/resources/config/ubo_hagen/messages_en.properties
@@ -1,5 +1,6 @@
 
 edit.comment = Note
 
-ubo.comment   = Note
-ubo.corporate = Corporate
+ubo.comment                = Note
+ubo.corporate              = Corporate
+ubo.role.author.validation = Please enter a originating person (e.g. author) or institution of the publication!
