--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -2,6 +2,9 @@
 edit.comment                   = Notiz
 
 editor.identity.picker.lead_id = HSB ID
+editor.identity.picker.name    = HSB ID
+
+listWizard.subselect = Person aus HSB w\u00E4hlen
 
 navigation.Home = Hochschulbibliographie
 navigation.UB   = UB Hagen
