add link to new duplicate report, update message properties and facets

--- a/src/main/resources/config/ubo_hagen/messages_de.properties
+++ b/src/main/resources/config/ubo_hagen/messages_de.properties
@@ -4,7 +4,15 @@ edit.comment                   = Notiz
 editor.identity.picker.lead_id = HSB ID
 editor.identity.picker.name    = HSB ID
 
-listWizard.subselect = Person aus HSB w\u00E4hlen
+facets.facet.connection_nid_text = Personenname (FU Hagen)
+facets.facet.origin_exact        = Einrichtung
+
+listWizard.description.title = Pers\u00F6nliche Publikationsliste erstellen
+listWizard.info.text1        = Gerne k\u00F6nnen Sie \u00FCber das folgende Formular Publikationslisten erstellen und exportieren. Neben Standardformaten wie BibTeX und RIS, gibt es die M\u00F6glichkeit, eine HTML-Datei zu erzeugen, mit der sich eine Bibliographie Ihrer Publikationen f\u00FCr Ihre eigenen Webseiten erstellen l\u00E4sst.
+listWizard.info.text2        = Bitte melden Sie fehlende Publikationen \u00FCber die Funktion \u201C<a href="newPublication.xed">Publikation melden</a>\u201D. Sollten Sie einen fehlerhaften Eintrag vorfinden, bitten wir Sie, die Korrektur bei uns <a href="contact.xml">zu melden</a>.
+listWizard.info.text3        = \ 
+listWizard.info.text4        = \ 
+listWizard.subselect         = Person aus HSB w\u00E4hlen
 
 navigation.Home = Hochschulbibliographie
 navigation.UB   = UB Hagen
