--- a/src/main/resources/config/ubo_hagen/messages_en.properties
+++ b/src/main/resources/config/ubo_hagen/messages_en.properties
@@ -1,4 +1,9 @@
 
 edit.comment = Note
 
+listWizard.info.text1        = Gerne k\u00F6nnen Sie \u00FCber das folgende Formular Publikationslisten erstellen und exportieren. Neben Standardformaten wie BibTeX und RIS, gibt es die M\u00F6glichkeit, eine HTML-Datei zu erzeugen, mit der sich eine Bibliographie Ihrer Publikationen f\u00FCr Ihre eigenen Webseiten erstellen l\u00E4sst.
+listWizard.info.text2        = Bitte melden Sie fehlende Publikationen \u00FCber die Funktion \u201C<a href="newPublication.xed">Publikation melden</a>\u201D. Sollten Sie einen fehlerhaften Eintrag vorfinden, bitten wir Sie, die Korrektur bei uns <a href="contact.xml">zu melden</a>.
+listWizard.info.text3        = \ 
+listWizard.info.text4        = \ 
+
 ubo.comment = Note
